--- a/style.css
+++ b/style.css
@@ -229,3 +229,69 @@ body {
   letter-spacing: 1px;
 }
 
+/* Win Popup*/
+.win-popup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.85);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999;
+}
+
+.burst {
+  width: 400px;
+  height: 400px;
+  background: radial-gradient(circle, gold 0%, orange 70%);
+  color: #001a33;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+
+  /* Bentuk bergerigi */
+  clip-path: polygon(
+    50% 0%, 60% 15%, 75% 5%, 85% 20%, 100% 25%,
+    90% 40%, 100% 50%, 90% 60%, 100% 75%,
+    85% 80%, 75% 95%, 60% 85%, 50% 100%,
+    40% 85%, 25% 95%, 15% 80%, 0% 75%,
+    10% 60%, 0% 50%, 10% 40%, 0% 25%,
+    15% 20%, 25% 5%, 40% 15%
+  );
+
+  animation: zoomIn 0.6s ease;
+}
+
+.burst h1 {
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+
+.amount {
+  font-size: 32px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.burst button {
+  padding: 10px 20px;
+  border: none;
+  background: #001a33;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
